<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="100dp"
    tools:context=".presentation.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_msg" />

    <EditText
        android:id="@+id/edtFNameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/fname" />

    <EditText
        android:id="@+id/edtLNameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtFNameTxt"
        android:hint="@string/lname" />

    <EditText
        android:id="@+id/edtFEmailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtLNameTxt"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtFEmailTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#fc9803"
        android:text="@string/register"
        android:onClick="onbtnRegisterClicked"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/guesttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:text="@string/guest_msg"
            android:textAlignment="center" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:backgroundTint="#fc9803"
            android:src="@drawable/baseline_arrow_right_alt_24"
            app:backgroundTint="#FFFF"
            app:rippleColor="#0bfc03"
            android:onClick="onbtnRightClicked"/>

    </LinearLayout>

</RelativeLayout>