<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="comp3350.grs.presentation.LoginBackground"
        android:background="@color/blue2"
        android:paddingVertical="15dp"
        android:paddingHorizontal="30dp">

    <Button
            android:text="@string/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:background="@drawable/rounded_rectangle"
            android:textColor="@color/blue2"
            android:textSize="35sp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            android:layout_marginBottom="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="368dp" />

    <Button
            android:text="@string/continueAsGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:textColor="@color/blue2"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="35sp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="624dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            android:layout_marginStart="16dp"
            app:layout_constraintVertical_bias="0.719" />

    <TextView
            android:text="@string/alreadyHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="#F8F6F6"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="4dp"
            app:layout_constraintVertical_bias="0.982" />

    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="#FAF6F6"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"/>

    <ImageView
            android:src="@mipmap/logo1"
            android:layout_width="455dp"
            android:layout_height="223dp"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp" />

</androidx.constraintlayout.widget.ConstraintLayout>